--- a/webpage.html
+++ b/webpage.html
@@ -6,10 +6,12 @@
     <link rel="stylesheet" href="style.css">
     <title>Hacktoberfest 2021</title>
 </head>
-<body  bgcolor="rgb(188, 8, 10)";>
-    <h1 style="color:rgba(250, 18, 173, 0.719)";> Hacktoberfest 2021 </h1>
-    These are the basic tags that can be used in a webpage.
-    <h2 style="color:blue ";>AthulyaTS</h2>
-    <p><I>Country of Residence : INDIA</I></p>
+<body  bgcolor="lightblue";>
+    <div align=center>
+    <h1 style="color:rgba(16, 94, 196, 0.438)";> Hacktoberfest 2021 </h1>
+        <b>These are the basic tags that can be used in a webpage.</b>
+    <h2 style="color:rgba(16, 94, 196, 0.438) ";>AthulyaTS</h2>
+    <p><b><I>Country of Residence : INDIA</I><b></p>
+        </div>
 </body>
 </html>
